src/objects/CC_Data_Category_Group_Mappings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>This is for Customer Community Support site</description>
    <fields>
        <fullName>Affiliation__c</fullName>
        <label>Affiliation</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client__c</fullName>
        <label>Client</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner__c</fullName>
        <label>Partner</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>CC Data Category Group Mapping</label>
</CustomObject>